--- a/hobbies.html
+++ b/hobbies.html
@@ -51,7 +51,7 @@
     <section class="container ">
 
         <div class="header-wrapper pseudobody">
-            <p class="" align="justify"> &emsp; &emsp;I have a few hobbies and among them I can mention flying around with my drone, hiking and exploring outdoors. These three combined are even better! I'm also not a person who turn down an invitation to drink something casually.</p>
+            <p class="header-wrapper tho" align="justify"> &emsp; &emsp;I have a few hobbies and among them I can mention flying around with my drone, hiking and exploring outdoors. These three combined are even better! I'm also not a person who turn down an invitation to drink something casually.</p>
             <div class="newcard toggleable container-fluid">
                 <div class="text-holder">
                     <h1 class="h1tog">click on this card</h1>
