--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             </div>
 
-        </main><br><br>
+        </main><br><br><br><br><br><br>
     </section>
     <div class="footer">does my website need a footer? Nope, but here he is. &copy; 2022 trchl. </div>
 </body>
