--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
     <title>tchrl - about me</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
