--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>tchrl</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -83,7 +83,7 @@
         </div>
 
 
-        <br><br>
+        <br>
         <main class="container">
             <div class="card-container">
                 <div class="card-text">
@@ -118,7 +118,7 @@
 
             </div>
 
-        </main><br><br><br><br><br><br>
+        </main><br><br><span class="hi">:)</span>
     </section>
     <div class="footer">does my website need a footer? Nope, but here he is. &copy; 2022 trchl. </div>
 </body>
