--- a/hobbies.html
+++ b/hobbies.html
@@ -21,7 +21,7 @@
     <title>tchrl - hobbies</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
