--- a/mygoal.html
+++ b/mygoal.html
@@ -20,7 +20,7 @@
     <title>tchrl - my goal</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
